--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,13 +20,13 @@ requirements:
     - make
     - pkg-config
   host:
-    - flux-core >=0.79,<0.80
+    - flux-core
     - {{ mpi }}
     - jansson
     - libpmix
     - libpmix-devel
   run:
-    - flux-core >=0.79,<0.80
+    - flux-core
     - {{ mpi }}
 
 test:
